Settlement report implementation (#162)